--- a/.tmux-powerlinerc
+++ b/.tmux-powerlinerc
@@ -11,9 +11,9 @@
 	# The theme to use.
 	export TMUX_POWERLINE_THEME="default"
 	# Overlay dirctory to look for themes. There you can put your own themes outside the repo. Fallback will still be the "themes" directory in the repo.
-	export TMUX_POWERLINE_DIR_USER_THEMES=""
+	export TMUX_POWERLINE_DIR_USER_THEMES="~/.tmux/powerline-user/themes"
 	# Overlay dirctory to look for segments. There you can put your own segments outside the repo. Fallback will still be the "segments" directory in the repo.
-	export TMUX_POWERLINE_DIR_USER_SEGMENTS=""
+	export TMUX_POWERLINE_DIR_USER_SEGMENTS="~/.tmux/powerline-user/segments"
 # }
 
 # battery.sh {
