--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,3 +31,8 @@ set-option -g status-left-length 60
 set-option -g status-right-length 90
 set-option -g status-left "#(~/.tmux/tmux-powerline/powerline.sh left)"
 set-option -g status-right "#(~/.tmux/tmux-powerline/powerline.sh right)"
+#将窗口列表换成 powerline的风格
+set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
+#添加显示和隐藏powerline状态栏
+bind-key C-[ run '~/.tmux/tmux-powerline/mute_powerline.sh left'      # Mute left statusbar.
+bind-key C-] run '~/.tmux/tmux-powerline/mute_powerline.sh right'     # Mute right statusbar.
