--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,7 @@ set-option -g status-interval 2
 set-option -g status-utf8 on
 set-option -g default-terminal "screen-256color"
 set-option -g status-justify "centre"
+set-option -g status-bg black
 set-option -g status-left-length 60
 set-option -g status-right-length 90
 set-option -g status-left "#(~/.tmux/tmux-powerline/powerline.sh left)"
